<resources>
    <string name="app_name">知书</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">更多选项</string>
    <string name="action_about">关于知书</string>
    <string name="action_about_me">关于我</string>
    <string name="action_mode">切换模式</string>
    <string name="share">分享</string>
    <string name="share_from">来自「知书」的分享:</string>

    <string name="about_introduce">「知书」- 年轻人的第一本书\n\n项目基于Retrofit + RxJava + RxAndroid + OkHttp实现</string>
    <string name="about_developers">关于我</string>
    <string name="about_open_source_lis">开源库</string>
    <string name="about_introduce_and_help">关于</string>
    <string name="about_open_source_libraries_list">BaseRecyclerViewAdapterHelper\nButterKnife\nAhBottomNavigation\nRetrofit\nRxAndroid\nRxJava\nCircularProgressView\nGlide</string>
    <string name="about_function">功能</string>
    <string name="about_function_list">1.Splash起始页\n2.热门新闻\n3.日报详情\n4.日报评论\n5.日报主编\n6.App分享\n7.知你所问-聊天机器人\n8.意见反馈-实时对话</string>
    <string name="about">关于</string>
    <string name="about_version">1.0</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="github">GitHub:https://github.com/Othell0</string>
    <string name="gmail">Gmail:willowlikepine@gmail.com</string>
    <string name="content">人之情多矫，世之俗多伪，岂可信乎？</string>
    <string name="author">---来俊臣《罗织经》</string>
    <string name="info_name">Othell0</string>
    <string name="update_note">update_note</string>
    <string name="navigation_weather" >天气</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="navigation_news">发现好视界</string>
    <string name="find_news">视界</string>
    <string name="navigation_intro">知书•发现新视界</string>
    <string name="feedback_hint">哪里还需要改进，请告诉我 - -</string>
    <string name="_160">160</string>
    <string name="feedback_commit">提交</string>
    <string name="more_activity_name">Othell0</string>
    <string name="check_homepage">查看我的个人主页</string>
    <string name="moreactivity_feedback">意见反馈</string>
    <string name="moreactivity_setting">通用设置</string>
    <string name="moreactivity_turing">知你所问</string>
    <string name="moreactivity_aboutApp">关于知书</string>
    <string name="check_update">检查更新</string>
    <string name="turing_send">发送</string>
    <string name="autoupdate_dialog_cancel">取消</string>
    <string name="turing_me">我</string>
    <string name="turing_robot">小知</string>
    <string name="empty_comment">还没有评论哦!</string>
    <string name="theme_detail_mainEditor">主编</string>
    <string name="bottombar_menu1">日报</string>
    <string name="bottombar_menu2">主题</string>
    <string name="bottombar_menu3">专栏</string>
    <string name="bottombar_menu4">文章</string>
    <string name="turing_hint">您有什么要问的？</string>

</resources>
